audit_expert/48_env_check.txt
=== 48. ENV VARIABLEN LIVE PRÜFUNG ===
[eval]:12
  else if (val.includes('PASSWORT') || val.includes('AENDERN') || val.includes('user:passwort')) 
  ^^^^
Expression expected

SyntaxError: Unexpected token 'else'
    at makeContextifyScript (node:internal/vm:185:14)
    at compileScript (node:internal/process/execution:383:10)
    at evalTypeScript (node:internal/process/execution:256:22)
    at node:internal/main/eval_string:74:3

Node.js v22.22.1
